--- a/index.html
+++ b/index.html
@@ -98,10 +98,7 @@
                 <input type="checkbox" id="item1">
                 <label class="page__trekk-header" for="item1">Opptakskrav og poeng </label>
                 <div class="page__trekk-content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam ducimus
-                        iure quasi tempore
-                        recusandae? Error ab iste sunt odio repellendus mollitia repellat esse. Ipsa sit neque illo
-                        dignissimos molestias aliquam.</p>
+                    <p>For å søke på dette programmet må du ha </p>
                     <ul class="page__trekk-liste">
                         <li><a href="https://www.samordnaopptak.no/info/opptak/opptak-uhg/">generrell studiekompetanse
                                 (samordnaopptak.no)</a> eller <a
@@ -126,6 +123,8 @@
                         <li>15. april: ordinær søknadsfrist</li>
                         <li>1. mars: frist for enkelte søkere</li>
                     </ul>
+                    <a href="https://www.oslomet.no/studier/soknad-og-opptak/opptak-til-bachelor-aarsstudier">Mer om å
+                        søke på bachelor</a>
                 </div>
             </div>
             <div class="page__trekk-item">
@@ -142,11 +141,27 @@
                         arbeidslivet.</p>
                     <p>Første året velger du hvilken av disse spesialiseringene du vil ta.</p>
 
+
+                    <ul class="page__trekk-liste">
+                        <li>
+                            <input type="checkbox" id="item4">
+                            <label class="page__trekk-header" for="item4">Statiske og datadrevne metoder</label>
+                            <div class="page__trekk-content">
+                                <p>Du lærer om hvordan du kan bruke målte data koblet med datadrevne og statistiske
+                                    metoder til å gjøre beregninger, for eksempel av fremtidige strømpriser.</p>
+                                <p>Du lærer hvordan du kan løse komplekse og sammensatte problemer, og utforske
+                                    høydimensjonale datatyper. Moderne metoder innen maskinlæring og kunstig intelligens
+                                    står sentralt.</p>
+                            </div>
+                        </li>
+                    </ul>
+
+
                 </div>
             </div>
             <div class="page__trekk-item">
-                <input type="checkbox" id="item4">
-                <label class="page__trekk-header" for="item4">Studiets oppbygging</label>
+                <input type="checkbox" id="item5">
+                <label class="page__trekk-header" for="item5">Studiets oppbygging</label>
                 <div class="page__trekk-content">
                     <h1 style="background-color: lightblue;">1. studieår</h1>
                     <div class="page__elementer">
@@ -597,8 +612,8 @@
             </div>
         </div>
         <div class="page__trekk-item">
-            <input type="checkbox" id="item5">
-            <label class="page__trekk-header" for="item5">Hvordan foregår undervisningen?</label>
+            <input type="checkbox" id="item6">
+            <label class="page__trekk-header" for="item6">Hvordan foregår undervisningen?</label>
             <div class="page__trekk-content">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam ducimus iure quasi tempore
                     recusandae? Error ab iste sunt odio repellendus mollitia repellat esse. Ipsa sit neque illo
