--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
                 <td>40</td>
             </tr>
         </table>
+        <p>
+            Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske og samfunnsnyttige
+            oppgaver.
+
+        </p>
 
         <div class="page__trekk">
             <div class="page__trekk-item">
@@ -826,72 +831,70 @@
                 </a>
             </div>
         </div>
+    </div>
+
+    <!-- Slutt av page -->
 
 
-        <!-- Slutt av page -->
+    <footer class="bottom">
 
+        <div class="bottom__upper">
+            <h1>Hold deg oppdatert på hva som skjer på Oslomet</h1>
+            <h2><a href="https://www.oslomet.no/nyhetsbrev">Abonner på vårt nyhetsbrev</a></h2>
 
-        <footer class="bottom">
+        </div>
 
-            <div class="bottom__upper">
-                <h1>Hold deg oppdatert på hva som skjer på Oslomet</h1>
-                <h2><a href="https://www.oslomet.no/nyhetsbrev">Abonner på vårt nyhetsbrev</a></h2>
+        <div class="bottom__page bottom__page--style">
 
-            </div>
+            <table class="bottom__tableLeft">
+                <tr>
+                    <th>OSLO METROPOLITAN UNIVERSITY</th>
+                    <td>STORBYUNIVERSITETET</td>
+                </tr>
 
-            <div class="bottom__page bottom__page--style">
+                <tr>
+                    <td>Postboks 7, Eksempel plass</td>
+                    <td>1147</td>
+                    <td>Tlf.: 11 11 11 11</td>
+                    <td><a href="https://www.oslomet.no/om/kontakt"><b>Kontakt oss</b></a></td>
+                </tr>
+            </table>
 
-                <table class="bottom__tableLeft">
-                    <tr>
-                        <th>OSLO METROPOLITAN UNIVERSITY</th>
-                        <td>STORBYUNIVERSITETET</td>
-                    </tr>
+            <table class="bottom__tableMiddle bottom__tableMiddle--style">
+                <tr>
+                    <th><a href="https://www.oslomet.no/en">English</a></th>
+                    <th><a href="https://www.oslomet.no/alumni">Alumni</a></th>
+                    <th><a href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a></th>
+                    <th><a href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a>
+                    </th>
+                    <th><a href="https://www.oslomet.no/om/for-ansatte">For ansatte</a></th>
+                    <th><a href="https://www.oslomet.no/om/for-studenter">For studenter</a></th>
+                    <th><a href="https://www.oslomet.no/om/ledige-stillinger">Ledige stillinger</a></th>
+                    <th><a href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklering
+                            og Informasjonskapslar</a></th>
+                    <th><a href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a></th>
+                    <th><a href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a>
+                    </th>
+                    <th> <a href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a></th>
+                </tr>
+            </table>
 
-                    <tr>
-                        <td>Postboks 7, Eksempel plass</td>
-                        <td>1147</td>
-                        <td>Tlf.: 11 11 11 11</td>
-                        <td><a href="https://www.oslomet.no/om/kontakt"><b>Kontakt oss</b></a></td>
-                    </tr>
-                </table>
+            <table class="bottom__tableRight bottom__tableRight--style">
+                <tr>
+                    <th><a href="https://www.facebook.com/oslomet/"><i
+                                class="fa-brands fa-square-facebook"></i>Facebook</a>
+                    </th>
+                    <th><a href="https://x.com/oslomet"><i class="fa-brands fa-square-x-twitter"></i>X
+                            (Twitter)</a></th>
+                    <th><a href="https://no.linkedin.com/school/oslomet/"><i
+                                class="fa-brands fa-linkedin"></i>Linkedln</a></th>
+                    <th><a href="https://www.instagram.com/oslomet/?hl=nb"><i
+                                class="fa-brands fa-square-instagram"></i>Instagram</a></th>
 
-                <table class="bottom__tableMiddle bottom__tableMiddle--style">
-                    <tr>
-                        <th><a href="https://www.oslomet.no/en">English</a></th>
-                        <th><a href="https://www.oslomet.no/alumni">Alumni</a></th>
-                        <th><a href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a></th>
-                        <th><a
-                                href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a>
-                        </th>
-                        <th><a href="https://www.oslomet.no/om/for-ansatte">For ansatte</a></th>
-                        <th><a href="https://www.oslomet.no/om/for-studenter">For studenter</a></th>
-                        <th><a href="https://www.oslomet.no/om/ledige-stillinger">Ledige stillinger</a></th>
-                        <th><a href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklering
-                                og Informasjonskapslar</a></th>
-                        <th><a href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a></th>
-                        <th><a
-                                href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a>
-                        </th>
-                        <th> <a href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a></th>
-                    </tr>
-                </table>
-
-                <table class="bottom__tableRight bottom__tableRight--style">
-                    <tr>
-                        <th><a href="https://www.facebook.com/oslomet/"><i
-                                    class="fa-brands fa-square-facebook"></i>Facebook</a>
-                        </th>
-                        <th><a href="https://x.com/oslomet"><i class="fa-brands fa-square-x-twitter"></i>X
-                                (Twitter)</a></th>
-                        <th><a href="https://no.linkedin.com/school/oslomet/"><i
-                                    class="fa-brands fa-linkedin"></i>Linkedln</a></th>
-                        <th><a href="https://www.instagram.com/oslomet/?hl=nb"><i
-                                    class="fa-brands fa-square-instagram"></i>Instagram</a></th>
-
-                    </tr>
-                </table>
-            </div>
-        </footer>
+                </tr>
+            </table>
+        </div>
+    </footer>
 </body>
 
 </html>
