--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
     <header class="bar">
 
-
         <div class="bar__icon bar__icon--style">
+
+            <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo.png" alt="Oslomet-logo"
+                    class="bar__image"></a>
 
             <div class="bar__meny">
                 <div class="bar__dropdown">
@@ -32,16 +34,24 @@
                     </div>
                 </div>
             </div>
-            <div class="icon__search">
-                <a href="#" style="text-decoration: none;">Søk 🔍</a>
-            </div>
 
+
+            <a href="#">Studieoversikt</a>
+
+            <div class="bar__meny">
+                <div class="bar__dropdown">
+                    <button class="bar__dropdownbtn">Pages ▼</button>
+                    <div class="bar__dropdown-content">
+                        <a href="#">Accesibility</a>
+                        <a href="#">Activity</a>
+                        <a href="#">Github</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="bar__right">
-            <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo.png" alt="Oslomet-logo"
-                    class="bar__image"></a>
-            <a href="#" class="right__studie right__studie--style">Studieoversikt</a>
-        </div>
+        <a href="#" style="text-decoration: none;">Søk 🔍</a>
+
+
 
     </header>
 
@@ -95,7 +105,6 @@
         <p>
             Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske og samfunnsnyttige
             oppgaver.
-
         </p>
 
         <div class="page__trekk">
@@ -836,17 +845,17 @@
     <!-- Slutt av page -->
 
 
-    <footer class="bottom">
+    <footer class="footer">
 
-        <div class="bottom__upper">
+        <div class="footer__upper">
             <h1>Hold deg oppdatert på hva som skjer på Oslomet</h1>
             <h2><a href="https://www.oslomet.no/nyhetsbrev">Abonner på vårt nyhetsbrev</a></h2>
 
         </div>
 
-        <div class="bottom__page bottom__page--style">
+        <div class="footer__page footer__page--style">
 
-            <table class="bottom__tableLeft">
+            <table class="footer__tableLeft">
                 <tr>
                     <th>OSLO METROPOLITAN UNIVERSITY</th>
                     <td>STORBYUNIVERSITETET</td>
@@ -860,7 +869,7 @@
                 </tr>
             </table>
 
-            <table class="bottom__tableMiddle bottom__tableMiddle--style">
+            <table class="footer__tableMiddle footer__tableMiddle--style">
                 <tr>
                     <th><a href="https://www.oslomet.no/en">English</a></th>
                     <th><a href="https://www.oslomet.no/alumni">Alumni</a></th>
@@ -879,7 +888,7 @@
                 </tr>
             </table>
 
-            <table class="bottom__tableRight bottom__tableRight--style">
+            <table class="footer__tableRight footer__tableRight--style">
                 <tr>
                     <th><a href="https://www.facebook.com/oslomet/"><i
                                 class="fa-brands fa-square-facebook"></i>Facebook</a>
