--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
         <div class="bar__icon bar__icon--style">
 
-            <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo.png" alt="Oslomet-logo"
+            <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo-fjern-bakgrunn.png" alt="Oslomet-logo"
                     class="bar__image"></a>
 
             <div class="bar__meny">
                 <div class="bar__dropdown">
-                    <button class="bar__dropdownbtn">Meny ☰</button>
+                    <button class="bar__dropdownbtn bar__dropdownbtn--style">Meny ☰</button>
                     <div class="bar__dropdown-content">
                         <a href="https://www.oslomet.no/studier">Studier</a>
                         <a href="https://www.oslomet.no/forskning">Forskningen vår</a>
@@ -34,13 +34,9 @@
                     </div>
                 </div>
             </div>
-
-
-            <a href="#">Studieoversikt</a>
-
             <div class="bar__meny">
                 <div class="bar__dropdown">
-                    <button class="bar__dropdownbtn">Pages ▼</button>
+                    <button class="bar__dropdownbtn bar__dropdownbtn--style">Pages ▼</button>
                     <div class="bar__dropdown-content">
                         <a href="#">Accesibility</a>
                         <a href="#">Activity</a>
@@ -48,8 +44,10 @@
                     </div>
                 </div>
             </div>
+            <a href="https://www.oslomet.no/studier/studieoversikt"
+                class="bar__link bar__link--style">Studieoversikt</a>
         </div>
-        <a href="#" style="text-decoration: none;">Søk 🔍</a>
+        <a href="#" style="text-decoration: none;" class="bar__search bar__search--style">Søk 🔍</a>
 
 
 
