--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Matematisk modellering og datavitenskap</title>
     <link rel="stylesheet" href="stylesheet/style.css">
+    <!-- denne lenken er fra fontawesome (sosiale medier ikoner) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,8 +18,9 @@
 
         <div class="bar__icon bar__icon--style">
 
-            <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo-fjern-bakgrunn.png" alt="Oslomet-logo"
-                    class="bar__image"></a>
+            <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo-fjernet-bakgrunn.png" alt="Oslomet-logo"
+                    class="bar__image">
+            </a>
 
             <div class="bar__meny">
                 <div class="bar__dropdown">
