added more layouts

--- a/index.html
+++ b/index.html
@@ -845,9 +845,14 @@
                     fra været
                     og strømprisene til utviklingen i boligmarkedet. </p>
             </div>
-            <div>
-                <img src="image/studenthistorie.jpg" alt="Bilde av studenthistorie" class="page__studenthistorie-image">
+            <div class="page__studenthistorie-image">
+                <img src="image/studenthistorie.jpg" alt="Bilde av studenthistorie">
             </div>
+        </a>
+
+        <a class="page__studenthistorie-boks">
+            <h2>Flere studenthistorier</h2>
+            <h2>></h2>
         </a>
     </div>
 
