added new links

--- a/index.html
+++ b/index.html
@@ -723,6 +723,7 @@
             </div>
 
             <div class="page__wrapper">
+
                 <h2>Studiested</h2>
                 <a href="https://www.oslomet.no/om/studiested-pilestredet">
                     <p>Studiested Pilestredet</p>
@@ -732,6 +733,7 @@
                 <a href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student">
                     <p>Har du spørsmål om utdanningen, kontakt oss gjennom vårt kontaktskjema.</p>
                 </a>
+
 
                 <h2>Faglig leder</h2>
 
@@ -850,10 +852,12 @@
             </div>
         </a>
 
-        <a class="page__studenthistorie-boks">
-            <h2>Flere studenthistorier</h2>
-            <h2>></h2>
-        </a>
+        <div class="page__studenthistorie-boks">
+            <a href="">
+                <h2>Flere studenthistorier</h2>
+                <h2>></h2>
+            </a>
+        </div>
     </div>
 
     <!-- Slutt av page -->
