--- a/github-page.html
+++ b/github-page.html
@@ -9,7 +9,7 @@
   <body>
     <header class="navbar">
       <nav class="navbar__container">
-        <!-- Meny-ikon for mobilvisning (checkbox for å vise/skjule menyen) -->
+        <!-- Meny-ikon for mobilvisning (checkbox for å vise/skjule menyen. hentet fra Mozilla devoloper) -->
         <input type="checkbox" id="menu-toggle" class="navbar__toggle" />
         <label for="menu-toggle" class="navbar__toggle-label">☰</label>
 
@@ -29,7 +29,7 @@
           >
         </div>
 
-        <!-- Dropdown-meny for de andre lenkene -->
+        <!-- Dropdown-meny for de andre lenkene, henter insperasjon fra Mozilla devoloper-->
         <div class="navbar__dropdown">
           <button class="navbar__dropdownbtn">Meny ☰</button>
           <div class="navbar__dropdown-content">
@@ -50,11 +50,11 @@
       </nav>
     </header>
 
-    <!-- Seksjon for bilder -->
+    <!-- område for bildene -->
     <section class="image-gallery">
       <h2>Screenshot fra Github</h2>
       <div class="image-gallery__container">
-        <!-- Bruk PNG-bilder -->
+        <!-- Brukt png fremfor jpg -->
         <img
           src="image/images:Github-page/Skjermbilde 2024-11-07 150833.png"
           alt="Bilde 1"
