--- a/github-page.html
+++ b/github-page.html
@@ -20,7 +20,7 @@
 
         <!-- Navigasjonslenker som alltid er synlige -->
         <div class="navbar__links">
-          <a href="https://www.oslomet.no/" class="navbar__link">Forside</a>
+          <a href="index.html" class="navbar__link">Forside</a>
           <a href="https://www.oslomet.no/accessibility" class="navbar__link"
             >Accessibility</a
           >
