--- a/Activity.html
+++ b/Activity.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="no">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min Aktivitet - Fotturer</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Kobler til det eksterne CSS-stilarket for hele nettstedet -->
+    <link rel="stylesheet" href="stylesheet/styles.css">
+    <!-- Kobler til det eksterne CSS-stilarket for hele nettstedet -->
 </head>
+
 <body>
     <!-- Header med navigasjonsmeny. Kobler til andre sider som f.eks. "index.html" og "github.html" -->
     <header>
         <nav>
-            <img src="images/Oslomet3.png" alt="" style="width: 5rem;">
+            <img src="image/Oslomet3.png" alt="" style="width: 5rem;">
             <ul>
-            
+
                 <li><a href="index.html">Hjem</a></li>
                 <li><a href="accessibility.html">Tilgjengelighet</a></li>
                 <li><a href="github.html">GitHub</a></li>
@@ -26,10 +29,11 @@
         <!-- Seksjon: Introduksjon til fotturer som aktivitet -->
         <section>
             <h1>Fotturer i Norge</h1>
-            <p>Opplev Norges vakre natur gjennom fotturer! Fotturer gir både mosjon og fantastiske naturopplevelser. Her finner du noen gode ressurser for å komme i gang.</p>
-            <p>Utforsk mer på 
-                <a href="https://ut.no/" target="_blank">UT.no</a>, 
-                <a href="https://www.visitnorway.no/" target="_blank">Visit Norway</a> og 
+            <p>Opplev Norges vakre natur gjennom fotturer! Fotturer gir både mosjon og fantastiske naturopplevelser. Her
+                finner du noen gode ressurser for å komme i gang.</p>
+            <p>Utforsk mer på
+                <a href="https://ut.no/" target="_blank">UT.no</a>,
+                <a href="https://www.visitnorway.no/" target="_blank">Visit Norway</a> og
                 <a href="https://www.dnt.no/" target="_blank">Den Norske Turistforening</a>.
             </p>
         </section>
@@ -39,29 +43,37 @@
             <h2>Galleri</h2><!--Bildene er kopiert fra UT.NO-->
 
             <div class="gallery">
-                <img src="images/fjelltur1.jpg" alt="Sti i fjellet"> <!--https://ut.no/turforslag/1112192112/liin  Bilde 1-->
-                <img src="images/fjelltur2.jpg" alt="Utsikt over innsjø"> <!--https://ut.no/turforslag/1112192260/bomknotten-utsiktspunkt-vennesla Bilde 2-->
-                <img src="images/fjelltur3.jpg" alt="Solnedgang i skogen"> <!--https://ut.no/turforslag/1112192260/bomknotten-utsiktspunkt-vennesla Bilde 3-->
-                <img src="images/fjelltur4.jpg" alt="Fottur i skogen med en hund"> <!--https://ut.no/turforslag/1112192260/bomknotten-utsiktspunkt-vennesla Bilde 4-->
+                <img src="image/fjelltur1.jpg" alt="Sti i fjellet">
+                <!--https://ut.no/turforslag/1112192112/liin  Bilde 1-->
+                <img src="image/fjelltur2.jpg" alt="Utsikt over innsjø">
+                <!--https://ut.no/turforslag/1112192260/bomknotten-utsiktspunkt-vennesla Bilde 2-->
+                <img src="image/fjelltur3.jpg" alt="Solnedgang i skogen">
+                <!--https://ut.no/turforslag/1112192260/bomknotten-utsiktspunkt-vennesla Bilde 3-->
+                <img src="image/fjelltur4.jpg" alt="Fottur i skogen med en hund">
+                <!--https://ut.no/turforslag/1112192260/bomknotten-utsiktspunkt-vennesla Bilde 4-->
             </div>
         </section>
 
         <!-- Seksjon: Beskrivelse av fordelene ved fotturer -->
         <section>
             <h2>Fordeler ved fotturer</h2>
-            <p>Fotturer styrker både kropp og sinn, og gir deg mental ro og fysisk trening. Å være ute i naturen har mange positive helseeffekter.</p>
-            <p>Les mer om helsefordelene ved fotturer på 
-                <a href="https://www.healthline.com/health/benefits-of-hiking" target="_blank">Healthline</a> og 
-                <a href="https://www.mindbodygreen.com/articles/the-mental-health-benefits-of-hiking" target="_blank">Mindbodygreen</a>.
+            <p>Fotturer styrker både kropp og sinn, og gir deg mental ro og fysisk trening. Å være ute i naturen har
+                mange positive helseeffekter.</p>
+            <p>Les mer om helsefordelene ved fotturer på
+                <a href="https://www.healthline.com/health/benefits-of-hiking" target="_blank">Healthline</a> og
+                <a href="https://www.mindbodygreen.com/articles/the-mental-health-benefits-of-hiking"
+                    target="_blank">Mindbodygreen</a>.
             </p>
         </section>
 
         <!-- Seksjon: Sikkerhet og forberedelser før fotturer -->
         <section>
-            <h2>Sikkerhet  på tur</h2>
-            <p>Det er viktig å være forberedt før du legger ut på en fottur. Sørg for å ha med deg nødvendig utstyr og sjekk værmeldingen før du drar.</p>
-            <p>Få tips om fottursikkerhet på 
-                <a href="https://www.nationalgeographic.com/adventure/article/safety-tips-for-hiking" target="_blank">National Geographic</a> og 
+            <h2>Sikkerhet på tur</h2>
+            <p>Det er viktig å være forberedt før du legger ut på en fottur. Sørg for å ha med deg nødvendig utstyr og
+                sjekk værmeldingen før du drar.</p>
+            <p>Få tips om fottursikkerhet på
+                <a href="https://www.nationalgeographic.com/adventure/article/safety-tips-for-hiking"
+                    target="_blank">National Geographic</a> og
                 <a href="https://www.backpacker.com/skills/how-to-hike-smart/" target="_blank">Backpacker</a>.
             </p>
         </section>
@@ -70,11 +82,14 @@
         <section>
             <h2>Nyttige ressurser</h2>
             <ul>
-                <li><a href="https://www.norskfriluftsliv.no/" target="_blank">Norsk Friluftsliv</a> for informasjon om friluftsliv.</li>
+                <li><a href="https://www.norskfriluftsliv.no/" target="_blank">Norsk Friluftsliv</a> for informasjon om
+                    friluftsliv.</li>
                 <li><a href="https://www.alltrails.com/" target="_blank">AllTrails</a> for detaljer om turstier.</li>
-                <li><a href="https://www.turistforeningen.no/" target="_blank">Den Norske Turistforening</a> for turplanlegging.</li>
+                <li><a href="https://www.turistforeningen.no/" target="_blank">Den Norske Turistforening</a> for
+                    turplanlegging.</li>
                 <li><a href="https://www.fjords.com/" target="_blank">Fjords.com</a> for informasjon om fjordturer.</li>
-                <li><a href="https://www.outdooractive.com/en/" target="_blank">Outdooractive</a> for ruteplanlegging.</li>
+                <li><a href="https://www.outdooractive.com/en/" target="_blank">Outdooractive</a> for ruteplanlegging.
+                </li>
             </ul>
         </section>
     </main>
@@ -84,4 +99,5 @@
         <p>&copy; 2024 Min Aktivitet</p>
     </footer>
 </body>
+
 </html>
