--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stylesheet/style.css">
+    <link rel="stylesheet" href="stylesheet/stylesss.css">
 </head>
+
 <body>
     <header class="bar">
 
@@ -26,31 +28,35 @@
 
     </header>
 
-    <div class="page">   
-        <div class="top__page">   
-            <h1 class="main__title"style="font-weight: 100; text-align: justify; font-family: Arial, Helvetica, sans-serif;">
-            <strong> Accessibility page </strong> - våre tanker og avgjørelser</h1>
+    <div class="page">
+        <div class="top__page">
+            <h1 class="main__title"
+                style="font-weight: 100; text-align: justify; font-family: Arial, Helvetica, sans-serif;">
+                <strong> Accessibility page </strong> - våre tanker og avgjørelser
+            </h1>
 
             <div class="head__img">
                 <img src="image/HTML5.png" alt="HTML5 logo">
-                <img src="image/css3.png" alt="CSS3 logo">   
-                <img class="twoboxes" src="image/Doctype__img.png" alt="bilde av koding">        
+                <img src="image/css3.png" alt="CSS3 logo">
+                <img class="twoboxes" src="image/Doctype__img.png" alt="bilde av koding">
             </div>
 
-            <h2 class="page__aboutproject" style="text-align: center; font-family: Arial, Helvetica, sans-serif;"> 
-            Denne siden er laget for å kunne gå i dybden på hvilke avgjørelser 
-            vi har tatt for å optimalisere vår nettside. Vi ønsker å begrunne valg av kode, struktur og 
-            design ved hjelp av HTML og CSS, og vise til testing gjennomført for kvalitetssikring av kodingen
+            <h2 class="page__aboutproject" style="text-align: center; font-family: Arial, Helvetica, sans-serif;">
+                Denne siden er laget for å kunne gå i dybden på hvilke avgjørelser
+                vi har tatt for å optimalisere vår nettside. Vi ønsker å begrunne valg av kode, struktur og
+                design ved hjelp av HTML og CSS, og vise til testing gjennomført for kvalitetssikring av kodingen
             </h2>
         </div>
 
         <section class="content">
-        <p class="page__text" style="font-family: Arial, Helvetica, sans-serif;">
-            Vi hadde et ønske om å optimalisere hjemmesiden Oslomet bruker for informasjon om bachelorprogrammet Matematisk modellering og datavitenskap - ingeniør. 
-        </p>
+            <p class="page__text" style="font-family: Arial, Helvetica, sans-serif;">
+                Vi hadde et ønske om å optimalisere hjemmesiden Oslomet bruker for informasjon om bachelorprogrammet
+                Matematisk modellering og datavitenskap - ingeniør.
+            </p>
         </section>
 
     </div>
-    
+
 </body>
+
 </html>
