--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -32,9 +32,9 @@
             <strong> Accessibility page </strong> - våre tanker og avgjørelser</h1>
 
             <div class="head__img">
-                <img src="image/HTML5.png" alt="HTML5 logo">
-                <img src="image/css3.png" alt="CSS3 logo">   
-                <img class="twoboxes" src="image/Doctype__img.png" alt="bilde av koding">        
+                <img src="image/HTML5logo.webp" alt="HTML5 logo">
+                <img src="image/CSS3logo.webp" alt="CSS3 logo">   
+                <img class="twoboxes" src="image/Skjermbilde 2024-11-17 133230.png" alt="bilde av koding">        
             </div>
 
             <h2 class="page__aboutproject" style="text-align: center; font-family: Arial, Helvetica, sans-serif;"> 
