--- a/github-page.html
+++ b/github-page.html
@@ -18,9 +18,9 @@
 
       <!-- Navigasjonslenker som alltid er synlige -->
       <div class="bar__meny">
-        <a href="https://www.oslomet.no/" class="bar__link bar__link--style">Hovedside</a>
-        <a href="https://www.oslomet.no/accessibility" class="bar__link bar__link--style">Accessibility</a>
-        <a href="https://www.oslomet.no/activity" class="bar__link bar__link--style">Activity</a>
+        <a href="index.html" class="bar__link bar__link--style">Hovedside</a>
+        <a href="HTMLAccesibility.HTML" class="bar__link bar__link--style">Accessibility</a>
+        <a href="Activity.html" class="bar__link bar__link--style">Activity</a>
       </div>
     </div>
 
@@ -72,7 +72,7 @@
     <p class="github__tekst"><strong>Effektiv feilsøking:</strong> Ved hjelp av commits og branches kan man isolere og
       løse feil raskere.
     </p>
-    </ul>
+
   </article>
 </body>
 
