--- a/github-page.html
+++ b/github-page.html
@@ -18,7 +18,7 @@
 
       <!-- Navigasjonslenker som alltid er synlige -->
       <div class="bar__meny">
-        <a href="index.html" class="bar__link bar__link--style">Hovedside</a>
+        <a href="index.html" class="bar__link bar__link--style">Hjemmeside</a>
         <a href="HTMLAccesibility.HTML" class="bar__link bar__link--style">Accessibility</a>
         <a href="Activity.html" class="bar__link bar__link--style">Activity</a>
       </div>
@@ -36,6 +36,7 @@
         Samarbeid ved bruk av Github
       </h1>
     </div>
+
 
     <h2 class="github__underoverskrift">Endringer og forbedringer av koder</h2>
     <p class="github__tekst">GitHub gjorde det enkelt med å endre linjer slik at alle teammedlemmer kan se på de nyeste
