--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <div class="bar__dropdown">
                     <button class="bar__dropdownbtn bar__dropdownbtn--style">Pages ▼</button>
                     <div class="bar__dropdown-content">
-                        <a href="#">Accesibility</a>
-                        <a href="#">Activity</a>
-                        <a href="#">Github</a>
+                        <a href="HTMLAccesibility.HTML">Tilgjengelighet</a>
+                        <a href="Activity.html">Aktivitet</a>
+                        <a href="github-page.html">Github</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                 <td>40</td>
             </tr>
         </table>
-        <p>
+        <p class="page__tekst">
             Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske og samfunnsnyttige
             oppgaver.
         </p>
@@ -110,7 +110,7 @@
         <div class="page__trekk">
             <div class="page__trekk-item">
                 <input type="checkbox" id="item1">
-                <label class="page__trekk-header" for="item1">Opptakskrav og poeng </label>
+                <label class="page__trekk-header" for="item1">Opptakskrav og poeng</label>
                 <div class="page__trekk-content">
                     <p>For å søke på dette programmet må du ha </p>
                     <ul class="page__trekk-liste">
@@ -124,7 +124,8 @@
                     <p>Det kan være konkurranse om plassene. Ved forrige opptak kom alle kvalifiserte søkere inn.</p>
                     <p>Hvis du mangler generell studiekompetanse eller enkelte fag fra videregående skole, kan du søke
                         på dette studiet om du har <a href="https://www.oslomet.no/studier/tkd/forkurs-ingenior">bestått
-                            ettårig forkurs for ingeniørutdanning.</a></p>
+                            ettårig forkurs for ingeniørutdanning.</a>
+                    </p>
 
                 </div>
             </div>
@@ -438,7 +439,7 @@
 
                     </div>
 
-                    <h2>Emnegruppe: Matematikk og fysikk</h2>
+                    <h3>Emnegruppe: Matematikk og fysikk</h3>
 
                     <div class="page__elementer">
                         <h2>5. semester</h2>
@@ -509,7 +510,7 @@
                         </ul>
                     </div>
 
-                    <h2>Emnegruppe: Statistiske og datadrevne metoder</h2>
+                    <h3>Emnegruppe: Statistiske og datadrevne metoder</h3>
 
                     <div class="page__elementer">
                         <h2>5. semester</h2>
@@ -576,7 +577,7 @@
 
 
 
-                    <h2>Emnegruppe: Vitenskapelige beregninger</h2>
+                    <h3>Emnegruppe: Vitenskapelige beregninger</h3>
 
                     <div class="page__elementer">
                         <h2>5. semester</h2>
@@ -708,7 +709,7 @@
             </div>
             <div class="page__trekk-item">
                 <input type="checkbox" id="item12">
-                <label class="page__trekk-header" for="item12">Utveksling</label>
+                <label class="page__trekk-header" for="item12">Videre studiemuligheter ved OsloMet</label>
                 <div class="page__trekk-content">
 
                     <div class="page__elementer">
@@ -721,126 +722,127 @@
                     </div>
                 </div>
             </div>
-
-            <div class="page__wrapper">
-
-                <h2>Studiested</h2>
-                <a href="https://www.oslomet.no/om/studiested-pilestredet">
-                    <p>Studiested Pilestredet</p>
-                </a>
-
-                <h2>Spørsmål om utdanningen?</h2>
-                <a href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student">
-                    <p>Har du spørsmål om utdanningen, kontakt oss gjennom vårt kontaktskjema.</p>
-                </a>
-
-
-                <h2>Faglig leder</h2>
-
-                <a href="https://www.oslomet.no/om/ansatt/krhel3944/" class="page__faglig-leder-boks">
-                    <table>
-                        <tr>
-                            <td rowspan="4" class="profile-image">
-                                <img src="image/faglig-leder.jpg" alt="Kristoffer Herland Hellton">
-                            </td>
-                            <th>Navn</th>
-                            <td>Kristoffer Herland Hellton</td>
-                        </tr>
-                        <tr>
-                            <th>Stilling</th>
-                            <td>Førsteamanuensis</td>
-                        </tr>
-                        <tr>
-                            <th>Telefon</th>
-                            <td>+47 672 37 240</td>
-                        </tr>
-                        <tr>
-                            <th>E-post</th>
-                            <td>kristoffer.hellton@oslomet.no</td>
-                        </tr>
-                    </table>
-                </a>
-
-
-            </div>
-
-
-
-            <h1 style="text-align: center;">Du er kanskje også interessert i disse?</h1>
-            <div class="page__grid-container">
-                <!-- Anvendt datateknologi -->
-                <a href="https://www.oslomet.no/studier/tkd/anvendt-datateknologi" class="page__grid-item">
-                    <h2 class="page__tittel">Anvendt datateknologi</h2>
-                    <ul class="page__detaljer">
-                        <li>Bachelorprogram | 3år</li>
-                        <li>Pilestredet i Oslo | Heltid</li>
-                    </ul>
-                </a>
-                <a href="https://www.oslomet.no/studier/tkd/maskiningenior" class="page__grid-item">
-                    <!-- Maskiningeniør -->
-                    <h2 class="page__tittel">Maskiningeniør</h2>
-                    <ul class="page__detaljer">
-                        <li>Bachelorprogram | 3år</li>
-                        <li>Pilestredet i Oslo | Heltid</li>
-                    </ul>
-                </a>
-                <a href="https://www.oslomet.no/studier/tkd/byggingenior" class="page__grid-item">
-                    <!-- Byggingeniør -->
-                    <h2 class="page__tittel">Byggingeniør</h2>
-                    <ul class="page__detaljer">
-                        <li>Bachelorprogram | 3år</li>
-                        <li>Pilestredet i Oslo | Heltid</li>
-                    </ul>
-                </a>
-                <a href="https://www.oslomet.no/studier/tkd/dataingenior" class="page__grid-item">
-                    <!-- Dataingeniør -->
-                    <h2 class="page__tittel">Dataingeniør</h2>
-                    <ul class="page__detaljer">
-                        <li>Bachelorprogram | 3år</li>
-                        <li>Pilestredet i Oslo | Heltid</li>
-                    </ul>
-                </a>
-                <a href="https://www.oslomet.no/studier/tkd/elektronikkingenior" class="page__grid-item">
-                    <!-- Elektronikkingeniør -->
-                    <h2 class="page__tittel">Elektronikkingeniør</h2>
-                    <ul class="page__detaljer">
-                        <li>Bachelorprogram | 3år</li>
-                        <li>Pilestredet i Oslo | Heltid</li>
-                    </ul>
-                </a>
-                <a href="https://www.oslomet.no/studier/tkd/informasjonsteknologi" class="page__grid-item">
-                    <!-- Informasjonsteknologi -->
-                    <h2 class="page__tittel">Informasjonsteknologi</h2>
-                    <ul class="page__detaljer">
-                        <li>Bachelorprogram | 3år</li>
-                        <li>Pilestredet i Oslo | Heltid</li>
-                    </ul>
-                </a>
-                <a href="https://www.oslomet.no/studier/tkd/bioteknologi-kjemiingenior" class="page__grid-item">
-                    <!-- Bioteknologi og kjemiingeniør -->
-                    <h2 class="page__tittel">Bioteknologi- og kjemiingeniør</h2>
-                    <ul class="page__detaljer">
-                        <li>Bachelorprogram | 3år</li>
-                        <li>Pilestredet i Oslo | Heltid</li>
-                    </ul>
-                </a>
-                <a href="https://www.oslomet.no/studier/tkd/tre-termin-ingenior" class="page__grid-item">
-                    <!-- Tre termins-ordning -->
-                    <h2 class="page__tittel">Tre-terminsordning til ingeniørutdanning</h2>
-                    <ul class="page__detaljer">
-                        <li>Bachelorprogram | 3år</li>
-                        <li>Pilestredet i Oslo | Heltid</li>
-                    </ul>
-                </a>
-            </div>
         </div>
+
+        <div class="page__wrapper">
+
+            <h2>Studiested</h2>
+            <a href="https://www.oslomet.no/om/studiested-pilestredet">
+                <p>Studiested Pilestredet</p>
+            </a>
+
+            <h2>Spørsmål om utdanningen?</h2>
+            <a href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student">
+                <p>Har du spørsmål om utdanningen, kontakt oss gjennom vårt kontaktskjema.</p>
+            </a>
+
+
+            <h2>Faglig leder</h2>
+
+            <a href="https://www.oslomet.no/om/ansatt/krhel3944/" class="page__faglig-leder-boks">
+                <table>
+                    <tr>
+                        <td rowspan="4" class="profile-image">
+                            <img src="image/faglig-leder.jpg" alt="Kristoffer Herland Hellton">
+                        </td>
+                        <th>Navn</th>
+                        <td>Kristoffer Herland Hellton</td>
+                    </tr>
+                    <tr>
+                        <th>Stilling</th>
+                        <td>Førsteamanuensis</td>
+                    </tr>
+                    <tr>
+                        <th>Telefon</th>
+                        <td>+47 672 37 240</td>
+                    </tr>
+                    <tr>
+                        <th>E-post</th>
+                        <td>kristoffer.hellton@oslomet.no</td>
+                    </tr>
+                </table>
+            </a>
+
+
+        </div>
+
+
+
+        <h1 style="text-align: center;">Du er kanskje også interessert i disse?</h1>
+        <div class="page__grid-container">
+            <!-- Anvendt datateknologi -->
+            <a href="https://www.oslomet.no/studier/tkd/anvendt-datateknologi" class="page__grid-item">
+                <h2 class="page__tittel">Anvendt datateknologi</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram | 3år</li>
+                    <li>Pilestredet i Oslo | Heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/maskiningenior" class="page__grid-item">
+                <!-- Maskiningeniør -->
+                <h2 class="page__tittel">Maskiningeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram | 3år</li>
+                    <li>Pilestredet i Oslo | Heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/byggingenior" class="page__grid-item">
+                <!-- Byggingeniør -->
+                <h2 class="page__tittel">Byggingeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram | 3år</li>
+                    <li>Pilestredet i Oslo | Heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/dataingenior" class="page__grid-item">
+                <!-- Dataingeniør -->
+                <h2 class="page__tittel">Dataingeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram | 3år</li>
+                    <li>Pilestredet i Oslo | Heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/elektronikkingenior" class="page__grid-item">
+                <!-- Elektronikkingeniør -->
+                <h2 class="page__tittel">Elektronikkingeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram | 3år</li>
+                    <li>Pilestredet i Oslo | Heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/informasjonsteknologi" class="page__grid-item">
+                <!-- Informasjonsteknologi -->
+                <h2 class="page__tittel">Informasjonsteknologi</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram | 3år</li>
+                    <li>Pilestredet i Oslo | Heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/bioteknologi-kjemiingenior" class="page__grid-item">
+                <!-- Bioteknologi og kjemiingeniør -->
+                <h2 class="page__tittel">Bioteknologi- og kjemiingeniør</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram | 3år</li>
+                    <li>Pilestredet i Oslo | Heltid</li>
+                </ul>
+            </a>
+            <a href="https://www.oslomet.no/studier/tkd/tre-termin-ingenior" class="page__grid-item">
+                <!-- Tre termins-ordning -->
+                <h2 class="page__tittel">Tre-terminsordning til ingeniørutdanning</h2>
+                <ul class="page__detaljer">
+                    <li>Bachelorprogram | 3år</li>
+                    <li>Pilestredet i Oslo | Heltid</li>
+                </ul>
+            </a>
+        </div>
+
 
         <h1>Studenthistorier</h1>
 
         <a href="" class="page__studenthistorie">
 
             <div class="page__studenthistorie-content">
-                <h3>Teknologi og design</h3>
+                <h1>Teknologi og design</h1>
 
                 <h2>Spå fremtiden med matematikk og datavitenskap</h2>
                 <p>Har du lyst til å finne ut hva som vil skje i fremtiden? Lær å bruke verktøy for å forutsi alt
@@ -867,7 +869,9 @@
 
         <div class="footer__upper">
             <h1>Hold deg oppdatert på hva som skjer på Oslomet</h1>
-            <h2><a href="https://www.oslomet.no/nyhetsbrev">Abonner på vårt nyhetsbrev</a></h2>
+            <h2 class="footer__upper-link"><a href="https://www.oslomet.no/nyhetsbrev"
+                    style="text-decoration: none;">Abonner på vårt
+                    nyhetsbrev</a></h2>
 
         </div>
 
