--- a/github-page.html
+++ b/github-page.html
@@ -56,9 +56,9 @@
       over tid. Commit-historikken i Github gir detaljer om hver endring , hvem som har gjort den, hva som er blir
       endret og når endringen har skjedd. Dette gjør at teamet får et klart bilde av utviklingen av prosjekter og det
       gjør det lettere å finne og forstå feil i kodebasen.</p>
-    <img src="image/images-Github-page/Skjermbilde 2024-11-07 150833.png" alt="Commit-Historikk eksempel 1"
+    <img src="image/images-Github-page/OppdaterteScreenShot.png" alt="Commit-Historikk eksempel 1"
       class="image-gallery__item">
-    <img src="image/images-Github-page/Skjermbilde 2024-11-07 151250.png" alt="Commit Historikk eksempel 2"
+    <img src="image/images-Github-page/OppdaderteScreenShot2.png" alt="Commit Historikk eksempel 2"
       class="image-gallery__item">
 
 
