--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
         <a href="" class="page__studenthistorie">
 
             <div class="page__studenthistorie-content">
-                <h1>Teknologi og design</h1>
+                <h1 class="page__studenthistorie-overskrift">Teknologi og design</h1>
 
                 <h2>Spå fremtiden med matematikk og datavitenskap</h2>
                 <p>Har du lyst til å finne ut hva som vil skje i fremtiden? Lær å bruke verktøy for å forutsi alt
