--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!--Dette er kopiert kode fra Faysbashir (branch: adding-some-images-and-text) 
     fordi vi hadde problemer med å merge -->
-    <div class="page">
+    <article class="page">
         <img src="image/Anvendt-datateknologi_bachelor.jpg" alt="Bilde av studiet" class="page__image">
         <h1 class="page__heading page__heading--style">Matematisk modellering og datavitenskap –
             ingeniør</h1>
@@ -102,7 +102,7 @@
                 <td>40</td>
             </tr>
         </table>
-        <p class="page__tekst">
+        <p class="page__tekst page__tekst--style">
             Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske og samfunnsnyttige
             oppgaver.
         </p>
@@ -114,8 +114,9 @@
                 <div class="page__trekk-content">
                     <p>For å søke på dette programmet må du ha </p>
                     <ul class="page__trekk-liste">
-                        <li><a href="https://www.samordnaopptak.no/info/opptak/opptak-uhg/">generrell studiekompetanse
-                                (samordnaopptak.no)</a> eller <a
+                        <li><a href="https://www.samordnaopptak.no/info/opptak/opptak-uhg/"><b>generrell
+                                    studiekompetanse
+                                    (samordnaopptak.no)</b></a> eller <a
                                 href="https://www.oslomet.no/studier/soknad-og-opptak/realkompetanse/realkompetanse-ingenior">oppfylle
                                 kravene til realkompetanse</a></li>
                         <li>matematikk R1 og R2</li>
@@ -138,8 +139,10 @@
                         <li>15. april: ordinær søknadsfrist</li>
                         <li>1. mars: frist for enkelte søkere</li>
                     </ul>
-                    <a href="https://www.oslomet.no/studier/soknad-og-opptak/opptak-til-bachelor-aarsstudier">Mer om å
-                        søke på bachelor</a>
+                    <a href="https://www.oslomet.no/studier/soknad-og-opptak/opptak-til-bachelor-aarsstudier">
+                        <p>Mer om å
+                            søke på bachelor</p>
+                    </a>
                 </div>
             </div>
             <div class="page__trekk-item">
@@ -157,7 +160,7 @@
                     <p>Første året velger du hvilken av disse spesialiseringene du vil ta.</p>
 
 
-                    <ul class="page__trekk-liste">
+                    <ul class="page__trekk-liste" style="list-style-type: none;">
                         <li>
                             <input type="checkbox" id="item4">
                             <label class="page__trekk-header" for="item4">Statiske og datadrevne metoder</label>
@@ -193,7 +196,9 @@
                     </ul>
 
                     <a href="https://student.oslomet.no/studier/-/studieinfo/programplan/HINGMAMO/2024/H%C3%98ST">
-                        < Se programplan på student.oslomet.no</a>
+                        <p>
+                            < Se programplan på student.oslomet.no</p>
+                    </a>
                 </div>
             </div>
             <div class="page__trekk-item">
@@ -674,7 +679,8 @@
                 <label class="page__trekk-header" for="item9">Hva koster det?</label>
                 <div class="page__trekk-content">
                     <a href="https://student.oslomet.no/semesteravgift">
-                        Du betaler en semesteravgift hvert semester (student.oslomet.no).
+                        <p>
+                            Du betaler en semesteravgift hvert semester (student.oslomet.no).</p>
                     </a>
 
                     <p><a href="https://student.oslomet.no/studieavgift-for-internasjonale-studenter-utenfor-eu-eos">Er
@@ -713,12 +719,14 @@
                 <div class="page__trekk-content">
 
                     <div class="page__elementer">
-                        <li class="page__boks page__boks--style">
-                            <a href="https://www.oslomet.no/studier/tkd/anvendt-data-informasjonsteknologi">
-                                Anvendt data- og informasjonsteknologi (ACIT)</a>
-                            <p style="margin-block: 0;">Masterprogram | 2år | Pilestredet i Oslo | Heltid</p>
+                        <ul class="page__trekk-liste" style="list-style-type: none;">
+                            <li class="page__boks page__boks--style">
+                                <a href="https://www.oslomet.no/studier/tkd/anvendt-data-informasjonsteknologi">
+                                    Anvendt data- og informasjonsteknologi (ACIT)</a>
+                                <p style="margin-block: 0;">Masterprogram | 2år | Pilestredet i Oslo | Heltid</p>
 
-                        </li>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -727,12 +735,12 @@
         <div class="page__wrapper">
 
             <h2>Studiested</h2>
-            <a href="https://www.oslomet.no/om/studiested-pilestredet">
+            <a class="page__wrapper-link" href="https://www.oslomet.no/om/studiested-pilestredet">
                 <p>Studiested Pilestredet</p>
             </a>
 
             <h2>Spørsmål om utdanningen?</h2>
-            <a href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student">
+            <a class="page__wrapper-link" href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student">
                 <p>Har du spørsmål om utdanningen, kontakt oss gjennom vårt kontaktskjema.</p>
             </a>
 
@@ -762,11 +770,7 @@
                     </tr>
                 </table>
             </a>
-
-
         </div>
-
-
 
         <h1 style="text-align: center;">Du er kanskje også interessert i disse?</h1>
         <div class="page__grid-container">
@@ -860,7 +864,7 @@
                 <h2>></h2>
             </a>
         </div>
-    </div>
+    </article>
 
     <!-- Slutt av page -->
 
